ISPN-7659 Infinispan doesn't build with the latest OpenJDK 9 early access builds
* Upgrade maven-compiler-plugin to version 3.6.1
* Change -addmods to --add-modules and fix the module name